# planck-chauffeur

./: README.md  getblaze.sh  planck-chauffeur.cabal  stack.yaml
app/: Main.hs
src/: Generator.hs  Lib.hs  Model.hs  View.hs
static/: styles.css
static/css/: styles.css
test/: GeneratorSpec.hs  LibSpec.hs  Seeds.hs
